# dbus-cli

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
include/: terminal.h  test.h
src/: CMakeLists.txt  main.c  terminal.c  test.c
test/: CMakeLists.txt  testmain.c
